--- a/template7 - drone2/css/main.css
+++ b/template7 - drone2/css/main.css
@@ -647,6 +647,7 @@ main.home {
       & > form {
         display: grid;
         row-gap: 20px;
+        align-content: center;
 
         & h2 {
           margin-bottom: 30px;
